fix z-index datasets tab

--- a/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
@@ -53,7 +53,7 @@
 @include mobile {
     .tabs.nav.nav-pills > li {
         a { 
-            z-index: 1000;
+            z-index: 700;
             display: inline;
             white-space: nowrap;
             font-size: 10px;
